--- a/.gitignore
+++ b/.gitignore
@@ -1,70 +1,43 @@
 # Also documentation for me of what we actually want.
 
 # What we want:
-
-# KiCad 6 files:
-#       https://dev-docs.kicad.org/en/file-formats/
-#       https://docs.kicad.org/6.0/en/kicad/kicad.html#kicad_files_and_folders
-
 # Project
-# .kicad_pro     project
-
+#   .kicad_pro     project
 # Schematic
-# .kicad_sch     schematic  including the symbols used
-# sym-lib-table  list of symbol libraries
-
+#   .kicad_sch     schematic  including the symbols used
+#   sym-lib-table  list of symbol libraries
 # Board
-# .kicad_pcb     board
-# fp-lib-table   list of footprint libraries
-
+#   .kicad_pcb     board
+#   fp-lib-table   list of footprint libraries
 # Libs
-# .kicad_sym     symbols multiple per file, not in any special folder
-# foo.pretty/    folder for footprint files  the folder is the library
-#   .kicad_mod     footprint one per file
-
+#   .kicad_sym     symbols multiple per file, not in any special folder
+#   foo.pretty/    folder for footprint files  the folder is the library
+#     .kicad_mod     footprint one per file
 # Other
-# .kicad_wks   worksheet if custom ones are defined
-# .net         component footprint association file
-# .cmp         
+#   .kicad_wks   worksheet if custom ones are defined
+#   .net         component footprint association file
+#   .cmp         
 
-# Things to ignore in git
-# .kicad_prl   local project settings
-# fp-info-cache  footprint cache to speed up loading
+# Things to ignore
+#   .kicad_prl   local project settings
+#   fp-info-cache  footprint cache to speed up loading
 
-
-
-# Old
-
-# myboard.pro   project
-# myboard.sch   schematic
-# myboard.kicad_pcb  board
-
-# myboard-cache.lib  cache of symbols used schematic      OBSOLETE w/ 6
-# fp-lib-table for footprints, sym-lib-table for symbols
-
-# library/
-#    foo.lib   schematic parts lib
-#    foo.dcm   descriptions for matching file
-#    bar.lib
-#    bar.dcm
-# myfootprint.pretty/
-#    bas_part.kicad_mod  footprints
-#    bap_part.kicad_mod  
-
-
-
- 
 # Ignore gerbers.
 # We commit and then remove after each fabrication
-kicad/gerber_hillside/*.gbr
-kicad/gerber_hillside/*.gbrjob
-kicad/gerber_hillside/*.drl
-kicad/gerber_hillside/*.ps
-kicad/gerber_hillside.zip
-
+*/gerber_*/*.gbr
+*/gerber_*/*.gbrjob
+*/gerber_*/*.drl
+*/gerber_*/*.ps
+*/gerber_*/*.svg
+*/gerber_*/*.dxf
+*/gerber_*.zip
+ 
 
 
 # References
+# KiCad 6 files:
+#       https://dev-docs.kicad.org/en/file-formats/
+#       https://docs.kicad.org/6.0/en/kicad/kicad.html#kicad_files_and_folders
 # https://en.wikibooks.org/wiki/Kicad/file_formats
 # https://docs.kicad.org/5.1/en/getting_started_in_kicad/getting_started_in_kicad.html#note-about-portability-of-kicad-project-files
 # https://github.com/github/gitignore/blob/master/KiCad.gitignore
@@ -90,6 +63,8 @@ fp-info-cache
 
 # backups
 *-backups/
+
+\#auto_saved_files\#
 
 
 # Netlist files (exported from Eeschema)
